org-note: update style

--- a/org-note/style/main.css
+++ b/org-note/style/main.css
@@ -240,7 +240,7 @@ pre.src-html:before {
 
 table {
   border-collapse: collapse;
-  display: block;
+  display: -webkit-inline-box;
   overflow-x: auto;
 }
 
